# webgui

./: .clangd  .gitignore  README.md  meson.build  package-lock.json  package.json  serve.py  webpack.config.js
assets/: index.html  pre.js
data/meson/: emscripten-install.sh  meson-cross-clang-cl.ini  meson-cross-wasm.ini
data/python/: serve.py
imgui/: meson.build
implot/: meson.build
install/share/: bundle.js  gui.js  gui.wasm  index.html  main.js  runtime.js
src/: index.js  main.cpp
src/gui/: imaws.cpp  imaws.hpp
src/gui/aws/: errors.hpp  session.cpp  session.hpp  window.cpp  window.hpp
src/gui/aws/session/: create_session_panel.hpp  create_session_panel_config_file.cpp  create_session_panel_default.cpp
src/gui/aws/windows/: cwl.hpp  iam.hpp  monitoring.cpp  monitoring.hpp
src/platform/: aws.cpp  aws.hpp  generic.hpp  platform.hpp
src/platform/darwin/: darwin.cpp  darwin.hpp
src/platform/emscripten/: emscripten.cpp  emscripten.hpp  emsdk_wget_http.cpp
src/platform/linux/: linux.cpp  linux.hpp
src/platform/windows/: windows.cpp  windows.hpp
src/util/: async.hpp  describe.hpp  stream.hpp
subprojects/: aws-c-auth.wrap  aws-c-common.wrap  aws-c-event-stream.wrap  aws-c-http.wrap  aws-c-io.wrap  aws-c-mqtt.wrap  aws-c-s3.wrap  aws-c-sdkutils.wrap  aws-checksums.wrap  aws-crt-cpp.wrap  aws-sdk-cpp.wrap  c4core.wrap  civetweb.wrap  debugbreak.wrap  duktape.wrap  emscripten-browser-clipboard.wrap  imgui.wrap  implot.wrap  implot3d.wrap  libcbor.wrap  openssl.wrap  opentelemetry-cpp.wrap  prometheus-cpp.wrap  rapidyaml.wrap  s2n-tls.wrap  upoll.wrap
subprojects/packagefiles/aws-c-auth/: meson.build
subprojects/packagefiles/aws-c-cal/: meson.build  meson_options.txt
subprojects/packagefiles/aws-c-common/: meson.build
subprojects/packagefiles/aws-c-common/include/aws/common/: meson.build
subprojects/packagefiles/aws-c-compression/: meson.build
subprojects/packagefiles/aws-c-compression/include/aws/compression/: exports.h
subprojects/packagefiles/aws-c-event-stream/: meson.build
subprojects/packagefiles/aws-c-http/: meson.build
subprojects/packagefiles/aws-c-io/: meson.build  meson_options.txt
subprojects/packagefiles/aws-c-io/source/emscripten/sys/: epoll.h
subprojects/packagefiles/aws-c-mqtt/: meson.build
subprojects/packagefiles/aws-c-s3/: meson.build
subprojects/packagefiles/aws-c-sdkutils/: meson.build
subprojects/packagefiles/aws-checksums/: meson.build
subprojects/packagefiles/aws-crt-cpp/: meson.build  meson_options.txt
subprojects/packagefiles/aws-crt-cpp/include/: meson.build
subprojects/packagefiles/aws-crt-cpp/include/aws/crt/: meson.build
subprojects/packagefiles/aws-sdk-cpp/: gen_api.py  meson.build  regenerate.py
subprojects/packagefiles/aws-sdk-cpp/src/aws-cpp-sdk-core/: meson.build
subprojects/packagefiles/aws-sdk-cpp/src/aws-cpp-sdk-core/include/aws/core/: meson.build
subprojects/packagefiles/aws-sdk-cpp/src/aws-cpp-sdk-identity-management/: meson.build
subprojects/packagefiles/c4core/: meson.build
subprojects/packagefiles/c4core/src/c4/ext/debugbreak/: debugbreak.h
subprojects/packagefiles/civetweb/: meson.build
subprojects/packagefiles/debugbreak/: meson.build
subprojects/packagefiles/duktape/: meson.build
subprojects/packagefiles/emscripten-browser-clipboard/: meson.build
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/implot/: meson.build
subprojects/packagefiles/implot3d/: meson.build
subprojects/packagefiles/openssl/: meson.build
subprojects/packagefiles/opentelemetry-cpp/: meson.build
subprojects/packagefiles/prometheus-cpp/: meson.build
subprojects/packagefiles/prometheus-cpp/core/include/prometheus/detail/: core_export.h
subprojects/packagefiles/prometheus-cpp/pull/include/prometheus/detail/: pull_export.h
subprojects/packagefiles/prometheus-cpp/push/include/prometheus/detail/: push_export.h
subprojects/packagefiles/rapidyaml/: meson.build
subprojects/packagefiles/upoll/: meson.build
